@@ -765,7 +765,7 @@ l_tki                                   = "The Kabal Invasion";
 l_navigation                            = "Navigation";
 l_welcome_tki                           = "Welcome to The Kabal Invasion (TKI)!";
 l_tki_description                       = "TKI is a web-based massively multiplayer space combat and trading game inspired by the popular BBS games of TradeWars and Ultimate Universe.";
-l_cookie_warning                        = "The Kabal Invasion requires cookies for logins to work. By signing up or logging in you agree to let us set cookies.";
+l_cookie_warning                        = "The Kabal Invasion requires cookies. By signing up or logging in you agree to let us set cookies.";
 l_new_player                            = "New Player";
 
 [log]
